--- a/works.html
+++ b/works.html
@@ -780,13 +780,13 @@
             </div>
         </div>
     </div>
-    <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
-        <a>
-            <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
-            <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
-                style="transform: translate(0px, 0px);">
-        </a>
-    </div>
+     <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
+      <a href="contact.html">
+         <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
+         <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
+            style="transform: translate(0px, 0px);">
+      </a>
+   </div>
 
 
 
