--- a/blogs.html
+++ b/blogs.html
@@ -546,7 +546,7 @@
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                             <h3>Let’s Build Something </h3>
                             <div class="ctaa" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
-                                <a class="great-cta" href="" id="cursor-stick-area">
+                                <a href="contact.html" class="great-cta" href="" id="cursor-stick-area">
                                     Great Together
                                     <div class="arow">
                                         <img src="/assets/resources/img/get-arrow.svg" />
@@ -580,21 +580,21 @@
                                 <div class="botom">
                                     <ul>
                                         <li>
-                                            <a href="" class="insta"><span>
+                                            <a href="https://www.facebook.com/in.enigmadigital" class="insta"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="" class="face"><span>
+                                            <a href="https://www.instagram.com/enigmadigital/" class="face"><span>
                                                     <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="" class="lin"><span>
+                                            <a href="https://www.linkedin.com/company/in-enigmadigital" class="lin"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -602,7 +602,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="" class="twit"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" class="twit"><span>
                                                     <lottie-player class="so" src="twitter.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
