--- a/contact.html
+++ b/contact.html
@@ -413,12 +413,12 @@
                   <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                      <h3>Let’s Build Something </h3>
                      <div class="ctaa" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
-                        <a class="great-cta" href="" id="cursor-stick-area">
-                           Great Together
-                           <div class="arow">
-                              <img src="/assets/resources/img/get-arrow.svg" />
-                           </div>
-                        </a>
+                        <a href="contact.html" class="great-cta" href="" id="cursor-stick-area">
+                                    Great Together
+                                    <div class="arow">
+                                        <img src="/assets/resources/img/get-arrow.svg" />
+                                    </div>
+                                </a>
                      </div>
                   </div>
                   <div class="footer-flex">
@@ -439,37 +439,41 @@
                               class="cb-outro-social-item-title"><span data-text="Contact">Contact</span></span></a>
                      </div>
                      <div class="footer-left">
-                        <div class="botom">
-                           <ul>
-                              <li>
-                                 <a href="" class="insta"><span>
-                                       <lottie-player class="so" src="facebook.json" background="transparent" speed="1"
-                                          style="width: 15px; height: 20px;" hover></lottie-player>
-                                    </span></a>
-                              </li>
-                              <li>
-                                 <a href="" class="face"><span>
-                                       <lottie-player class="so" src="Instagramlogo.json" background="transparent"
-                                          speed="1" style="width: 20px; height: 20px;" hover></lottie-player>
-                                    </span></a>
-                              </li>
-                              <li>
-                                 <a href="" class="lin"><span>
-                                       <lottie-player class="so" src="linkedin.json" background="transparent" speed="1"
-                                          style="width: 20px; height: 20px;" hover></lottie-player>
-                                    </span>
-                                 </a>
-                              </li>
-                              <li>
-                                 <a href="" class="twit"><span>
-                                       <lottie-player class="so" src="twitter.json" background="transparent" speed="1"
-                                          style="width: 20px; height: 20px;" hover></lottie-player>
-                                    </span></a>
-                              </li>
-                           </ul>
-                        </div>
+                                <div class="botom">
+                                    <ul>
+                                        <li>
+                                            <a href="https://www.facebook.com/in.enigmadigital" class="insta"><span>
+                                                    <lottie-player class="so" src="facebook.json"
+                                                        background="transparent" speed="1"
+                                                        style="width: 15px; height: 20px;" hover></lottie-player>
+                                                </span></a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.instagram.com/enigmadigital/" class="face"><span>
+                                                    <lottie-player class="so" src="Instagramlogo.json"
+                                                        background="transparent" speed="1"
+                                                        style="width: 20px; height: 20px;" hover></lottie-player>
+                                                </span></a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.linkedin.com/company/in-enigmadigital" class="lin"><span>
+                                                    <lottie-player class="so" src="linkedin.json"
+                                                        background="transparent" speed="1"
+                                                        style="width: 20px; height: 20px;" hover></lottie-player>
+                                                </span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://twitter.com/_EnigmaDigital" class="twit"><span>
+                                                    <lottie-player class="so" src="twitter.json"
+                                                        background="transparent" speed="1"
+                                                        style="width: 20px; height: 20px;" hover></lottie-player>
+                                                </span></a>
+                                        </li>
+                                    </ul>
+                                </div>
 
-                     </div>
+                            </div>
                   </div>
                   <div class="bottom-footer">
                      <p>© 2022 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.</p>
