--- a/services.html
+++ b/services.html
@@ -406,8 +406,9 @@
                                     </p>
                                     <span>
                                         <div class="en-form-submit">
-                                            <a class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
-                                                    data-text="Read More">Read More</span></a>
+                                            <a href="technology-development.html" class="en-btn en-btn_send"
+                                                data-magnetic data-cursor="-opaque"><span data-text="Read More">Read
+                                                    More</span></a>
                                         </div>
                                     </span>
                                 </div>
@@ -438,8 +439,9 @@
                                         </span>
                                     </p>
                                     <span>
-                                        <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                                data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
+                                        <div class="en-form-submit"><a href="digital-marketing.html"
+                                                class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
+                                                    data-text="Read More">Read More</span></a>
                                         </div>
                                     </span>
                                 </div>
@@ -565,7 +567,7 @@
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                             <h3>Let’s Build Something </h3>
                             <div class="ctaa" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
-                                <a class="great-cta" href="" id="cursor-stick-area">
+                                <a href="contact.html" class="great-cta" href="" id="cursor-stick-area">
                                     Great Together
                                     <div class="arow">
                                         <img src="/assets/resources/img/get-arrow.svg" />
@@ -593,21 +595,21 @@
                                 <div class="botom">
                                     <ul>
                                         <li>
-                                            <a href="" class="insta"><span>
+                                            <a href="https://www.facebook.com/in.enigmadigital" class="insta"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="" class="face"><span>
+                                            <a href="https://www.instagram.com/enigmadigital/" class="face"><span>
                                                     <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="" class="lin"><span>
+                                            <a href="https://www.linkedin.com/company/in-enigmadigital" class="lin"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -615,7 +617,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="" class="twit"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" class="twit"><span>
                                                     <lottie-player class="so" src="twitter.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -635,14 +637,14 @@
         </div>
 
     </main>
-    
-     <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
-      <a href="contact.html">
-         <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
-         <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
-            style="transform: translate(0px, 0px);">
-      </a>
-   </div>
+
+    <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
+        <a href="contact.html">
+            <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
+            <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
+                style="transform: translate(0px, 0px);">
+        </a>
+    </div>
 
 
 
