--- a/works.html
+++ b/works.html
@@ -318,7 +318,7 @@
                                             data-cursor=" -color-accent-lilac">
 
                                             <!--Project Image-->
-                                            <div class="ar-work-image">
+                                            <div class="ar-work-image ">
                                                 <img alt="Project Image" src="/assets/resources/img/work-patronum.png">
                                             </div>
                                             <!--/Project Image-->
@@ -502,7 +502,7 @@
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                             <h3>Let’s Build Something </h3>
                             <div class="ctaa" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
-                                <a class="great-cta" href="" id="cursor-stick-area">
+                                <a href="contact.html" class="great-cta" href="" id="cursor-stick-area">
                                     Great Together
                                     <div class="arow">
                                         <img src="/assets/resources/img/get-arrow.svg" />
@@ -511,7 +511,7 @@
                             </div>
                         </div>
                         <div class="footer-flex">
-                      <div class="footer-right">
+                            <div class="footer-right">
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
@@ -536,21 +536,22 @@
                                 <div class="botom">
                                     <ul>
                                         <li>
-                                            <a href="" class="insta"><span>
+                                            <a href="https://www.facebook.com/in.enigmadigital" class="insta"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="" class="face"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                            <a href="https://www.instagram.com/enigmadigital/" class="face"><span>
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="" class="lin"><span>
+                                            <a href="https://www.linkedin.com/company/in-enigmadigital"
+                                                class="lin"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -558,7 +559,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="" class="twit"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" class="twit"><span>
                                                     <lottie-player class="so" src="twitter.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -780,13 +781,13 @@
             </div>
         </div>
     </div>
-     <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
-      <a href="contact.html">
-         <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
-         <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
-            style="transform: translate(0px, 0px);">
-      </a>
-   </div>
+    <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
+        <a href="contact.html">
+            <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
+            <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
+                style="transform: translate(0px, 0px);">
+        </a>
+    </div>
 
 
 
@@ -798,7 +799,7 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/130527/vanilla-tilt.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-   
+
     <script src="assets/resources/js/page.js"></script>
 
     <script>
