--- a/about.html
+++ b/about.html
@@ -2160,7 +2160,7 @@
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                             <h3>Let’s Build Something </h3>
                             <div class="ctaa" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
-                                <a class="great-cta" href="" id="cursor-stick-area">
+                                <a href="contact.html" class="great-cta" href="" id="cursor-stick-area">
                                     Great Together
                                     <div class="arow">
                                         <img src="/assets/resources/img/get-arrow.svg" />
@@ -2194,21 +2194,22 @@
                                 <div class="botom">
                                     <ul>
                                         <li>
-                                            <a href="" class="insta"><span>
+                                            <a href="https://www.facebook.com/in.enigmadigital" class="insta"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="" class="face"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                            <a href="https://www.instagram.com/enigmadigital/" class="face"><span>
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="" class="lin"><span>
+                                            <a href="https://www.linkedin.com/company/in-enigmadigital"
+                                                class="lin"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -2216,8 +2217,15 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="" class="twit"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" class="twit"><span>
                                                     <lottie-player class="so" src="twitter.json"
+                                                        background="transparent" speed="1"
+                                                        style="width: 20px; height: 20px;" hover></lottie-player>
+                                                </span></a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.behance.net/enigma-digital" class="face"><span>
+                                                    <lottie-player class="so" src="behance.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -2236,208 +2244,14 @@
         </div>
 
     </main>
-    <div class="form-container">
-        <div class="form-close" data-magnetic data-cursor="-opaque">
-            <img src="/assets/resources/img/close.png" width="30px">
-        </div>
-        <div class="container">
-            <div class="en-request-form">
-                <div class="form-h">
-                    <h2 class="frm">FOR A STEP
-                    </h2>
-                    <h2 class="s-fr frm">BEFORE THE
-                        START</h2>
-                </div>
-                <form class="en-form" action="/api/feedback/" method="post" enctype="multipart/form-data">
-                    <div class="en-form-label -smooth frm"><span>Contact </span> <span>/01</span></div>
-                    <div class="form-flex">
-                        <div class="en-form-group">
-                            <div class="en-input en-input_light frm"
-                                data-validity-msg='{"valueMissing":"Please fill your name"}'>
-                                <div class="en-input_light-box">
-                                    <input type="text" name="name" placeholder="Your name" required
-                                        aria-label="Your name">
-                                    <div class="en-input_light-line"></div>
-                                </div>
-                                <div class="en-input_light-message"></div>
-                            </div>
-                        </div>
-                        <div class="en-form-group">
-                            <div class="en-input en-input_light frm"
-                                data-validity-msg='{"valueMissing":"Please fill your email address","typeMismatch":"That email address looks a bit weird"}'>
-                                <div class="en-input_light-box">
-                                    <input type="email" name="email" placeholder="Your email" required
-                                        aria-label="Your email">
-                                    <div class="en-input_light-line"></div>
-                                </div>
-                                <div class="en-input_light-message"></div>
-                            </div>
-                        </div>
-                        <div class="en-form-group">
-                            <div class="en-input en-input_light fl frm"
-                                data-validity-msg='{"valueMissing":"Please fill your email address","typeMismatch":"That email address looks a bit weird"}'>
-                                <select name="items" class="form-control cascade pincode" id="pincode"
-                                    required="required">
-                                    <option value="" selected="">Code</option>
-                                    <!-- <option value="1" class="India">+91</option>
-                               <option value="2" class="Usa">+1</option> -->
 
-                                </select>
-                                <div class="en-input_light-box">
-                                    <input type="text" name="phone" placeholder="Phone No" required
-                                        aria-label="Phone No">
-                                    <div class="en-input_light-line"></div>
-                                </div>
-                                <div class="en-input_light-message"></div>
-                            </div>
-                        </div>
-                        <div class="en-form-group">
-                            <div class="en-input en-input_light frm"
-                                data-validity-msg='{"valueMissing":"Please fill your email address","typeMismatch":"That email address looks a bit weird"}'>
-                                <div class="en-input_light-box">
-                                    <input type="text" name="company" placeholder="Company Name" required
-                                        aria-label="Company Name">
-                                    <div class="en-input_light-line"></div>
-                                </div>
-                                <div class="en-input_light-message"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="en-form-group mt">
-                        <div class="en-input en-input_light">
-                            <div class="en-input_light-box">
-                                <textarea name="mess" placeholder="Tell us about your project"
-                                    aria-label="Tell us about your project"></textarea>
-                                <div class="en-input_light-line"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="en-form-group top-border">
-                        <div class="en-form-label -smooth frm"><span> HOW CAN WE HELP? </span> <span>/02</span></div>
-                        <div class="en-checkbox-group frm">
-                            <div class="en-checkbox en-checkbox_rounded">
-                                <label>
-                                    <input type="checkbox" name="service[]" value="branding">
-                                    <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/branding.svg" alt="" />
-                                        <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="Branding">Branding</span>
-                                        </span>
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="en-checkbox en-checkbox_rounded">
-                                <label>
-                                    <input type="checkbox" name="service[]" value="site-design">
-                                    <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/web.svg" alt="" />
-                                        <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="Web design">Web design</span>
-                                        </span>
-                                    </span>
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="en-checkbox en-checkbox_rounded">
-                                <label>
-                                    <input type="checkbox" name="service[]" value="app-design">
-                                    <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/app.svg" alt="" />
-                                        <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="App design">App design</span>
-                                        </span>
-                                    </span>
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="en-checkbox en-checkbox_rounded">
-                                <label>
-                                    <input type="checkbox" name="service[]" value="aso">
-                                    <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/aos.svg" alt="" />
-                                        <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="ASO expertise">ASO expertise</span>
-                                        </span>
-                                    </span>
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="en-checkbox en-checkbox_rounded">
-                                <label>
-                                    <input type="checkbox" name="service[]" value="illustration">
-                                    <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/illus.svg" alt="" />
-                                        <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="Illustrations">Illustrations</span>
-                                        </span>
-                                    </span>
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="en-checkbox en-checkbox_rounded">
-                                <label>
-                                    <input type="checkbox" name="service[]" value="css">
-                                    <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/css.svg" alt="" />
-                                        <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="HTML/CSS coding">HTML/CSS coding</span>
-                                        </span>
-                                    </span>
-                                    </span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="en-form-group top-border">
-                        <div class="en-form-label -smooth frm"><span> Project budget? </span> <span>/03</span></div>
-                        <div class="box">
-                            <div class="values">
-                                <div>$<span id="first"></span></div> - <div>$<span id="second"></span></div>
-                            </div>
-                            <div class="slider" data-value-0="#first" data-value-1="#second" data-range="#third"></div>
-                        </div>
-                    </div>
-                    <div class="en-form-group uploader">
-                        <div class="en-input en-input_file"
-                            data-validity="{&quot;size&quot;:26214400,&quot;limit&quot;:10}"
-                            data-validity-msg='{"size":"Size limit has been exceeded (25 mb)","limit":"Attach up to 10 files"}'>
-                            <input class="uploader__input" id="file-upload" type="file" name="fileUpload"
-                                accept="pdf/*" />
-
-                            <label class="uploader__label" for="file-upload">
-
-                                <div class="uploader__wrapper">
-                                    <img class="uploader__file hidden" src="#" alt="">
-                                    <svg class="uploader__svg" xmlns="http://www.w3.org/2000/svg" width="98px"
-                                        height="90px" viewBox="0 0 98 90">
-                                        <path class="uploader__clipalt"
-                                            d="M47.559,12.453L9.966,50.05 c0,0-16.188,15.611-0.892,30.908c15.297,15.301,30.995-0.804,30.995-0.804l50.666-50.669c0,0,10.814-10.891-0.268-21.981 c-11.087-11.088-21.97-0.288-21.97-0.288L24.221,51.486c0,0-10.736,8.541-2.432,16.921c8.307,8.384,16.832-2.521,16.832-2.521 l32.535-32.531" />
-                                        <path class="uploader__clip"
-                                            d="M47.559,12.453L9.966,50.05 c0,0-16.188,15.611-0.892,30.908c15.297,15.301,30.995-0.804,30.995-0.804l50.666-50.669c0,0,10.814-10.891-0.268-21.981 c-11.087-11.088-21.97-0.288-21.97-0.288L24.221,51.486c0,0-10.736,8.541-2.432,16.921c8.307,8.384,16.832-2.521,16.832-2.521 l32.535-32.531" />
-                                    </svg>
-                                    <span>Attached File</span>
-                                </div>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="en-form-submit">
-                        <button class="send" data-magnetic data-cursor="-opaque">
-                            <span>
-                                Submit
-                            </span>
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
+    <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
+        <a href="contact.html">
+            <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
+            <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
+                style="transform: translate(0px, 0px);">
+        </a>
     </div>
-     <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
-      <a href="contact.html">
-         <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
-         <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
-            style="transform: translate(0px, 0px);">
-      </a>
-   </div>
 
 
 
